Added database schema

--- a/src/templates/telemetry.html
+++ b/src/templates/telemetry.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+	Timestamp: 00:00:00 </br>
 	Temperature: 10 </br>
 	Humidity: 65 </br>
 	Pressure: 995 </br>
