--- a/src/templates/telemetry.html
+++ b/src/templates/telemetry.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-	Timestamp: 00:00:00 </br>
-	Temperature: 10 </br>
-	Humidity: 65 </br>
-	Pressure: 995 </br>
-	Light_intensity: 40 </br>
+	Timestamp: {{gathered_time}} </br>
+	Temperature: {{temperature}} </br>
+	Humidity: {{humidity}} </br>
+	Pressure: {{pressure}} </br>
+	Light_intensity: {{luminosity}} </br> 
+	No_of_lamps: {{lamps}} </br>
+	No_of_airfans: {{airfan}} </br>
+	No_of_heaters: {{heater}} </br>
 	Photo: TBD <br>
 {% endblock %}
