Added page with example photo

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,7 @@
             <a href="/index">Main page</a>
             <a href="/telecommands">Telecommands</a>
             <a href="/telemetry">Telemetry</a>
+            <a href="/photo"">Photo</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
