- added Error Log stub with tests - added error_log table to db

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,6 +12,7 @@
             <a href="/telecommands">Telecommands</a>
             <a href="/telemetry">Telemetry</a>
             <a href="/photo"">Photo</a>
+            <a href="/error_log"">Error log</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
