removed obsolete htmls; updated tests

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,4 @@
+<!-- template based on https://flask.palletsprojects.com/en/1.1.x/tutorial/templates/ -->
 <html>
     <head>
         {% if title %}
@@ -9,8 +10,6 @@
     <body>
         <div>
             <a href="/index">Main page</a>
-            <a href="/telecommands">Telecommands</a>
-            <a href="/telemetry">Telemetry</a>
             <a href="/photo"">Photo</a>
             <a href="/error_log"">Error log</a>
         </div>
